force-app/main/default/objects/Valve_Structure_Details_Appx__c/Valve_Structure_Details_Appx__c.object-meta.xml
<CustomObject>
    <label>Valve_Structure Details Appx</label>
    <nameField>
        <label>Valve_Structure Details Appx</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Valve_Structure Details Appx</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>