force-app/main/default/objects/Valve_Structure_Details_Appx__c/fields/Component_Part__c.field-meta.xml
<CustomField>
    <fullName>Component_Part__c</fullName>
    <label>Component Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>