force-app/main/default/objects/Valve_Structure_Details_Appx__c/fields/Qty_per_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Qty_per_Assembly__c</fullName>
    <label>Qty per Assembly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>