force-app/main/default/objects/Valve_Structure_Details_Appx__c/fields/Stucture_Element__c.field-meta.xml
<CustomField>
    <fullName>Stucture_Element__c</fullName>
    <label>Stucture Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>