force-app/main/default/objects/Valve_Structure_Details_Appx__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stucture_Element__c</columns>
    <columns>ItemNo__c</columns>
    <columns>Component_Part__c</columns>
    <columns>Qty_per_Assembly__c</columns>
    <columns>Scrap_Factor__c</columns>
    <columns>Component_Scrap__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>